# StardewValleyModsManager

./: .gitignore  Cargo.toml  LICENSE  README.md  mod_manager.db  test.db  test_mods_manager.db
src/: config.rs  lib.rs  link_manager.rs  main.rs  total_manager.rs  ui.rs
src/mods_manager/: mod.rs  mods_info_storage.rs  mods_scanner.rs
tests/: integration_test.rs
