[package]
name = "StardewModsManager"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }       # 使用捆绑的SQLite，避免系统依赖
eframe = { version = "0.33.3", features = ["wgpu", "default"] }
dirs = "6.0.0"
rfd = "0.14"
toml = "0.9.10"
walkdir = "2.5.0"

[lib]
name = "StardewModsManager"
path = "src/lib.rs"

[dev-dependencies]
eframe = { version = "0.33.3", features = ["wgpu", "default"] }
